--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,70 +5,18 @@
 
 <div class="container-fluid">
 
-  <div class="row">
-    <div class="col-4">
-      LIST OF CONVERSATIONS
-      <div class="row">
-        <div class="col-4">
-          <strong>id</strong>
-        </div>
-        <div class="col-8">
-          <strong>firstMessage</strong>
-        </div>
-      </div>
-      <div *ngFor="let row of conversations" class="row" style="cursor:pointer" (click)="selectConversation(row.info.conversationId)">
-        <div class="col-4 text-truncate text-nowrap">{{row.info?.conversationId}}</div>
-        <div class="col-8 text-truncate text-nowrap">{{row.messageRecords[0]?.messageData?.msg?.text}}</div>
-      </div>
+  <div class="row no-gutters mt-2">
+
+    <div class="col-4 pr-1">
+      <app-conversations [conversations]="conversations" (selectConversation)="getConversation($event)"></app-conversations>
     </div>
 
-    <div class="col-4 scroll-container">
-      MESSAGES
-      <div class="row">
-        <div class="col-4">
-          <strong>sentBy</strong>
-        </div>
-        <div class="col-8">
-          <strong>message</strong>
-        </div>
-      </div>
-
-      <div *ngFor="let row of messages" class="row">
-        <div class="col-4">
-          <strong>{{row?.sentBy}}</strong>
-        </div>
-        <div class="col-8">{{row?.messageData?.msg?.text}}</div>
-      </div>
-
+    <div class="col-4 pr-1">
+      <app-messages [conversation]="conversation"></app-messages>
     </div>
 
     <div class="col-4">
-      CONVERSATION NOTES
-      <form *ngIf="conversationId">
-        <div class="row">
-          <div class="col-12">
-            <strong>
-              <label for="outcomeSelect">Outcome Select</label>
-            </strong>
-            <select class="form-control" id="outcomeSelect" [(ngModel)]="select" value="{{(afData$ | async)?.conversations[conversationId]?.select}}" name="outcomeSelect" (ngModelChange)="updateSelect(select)">
-              <option [value]="1">1</option>
-              <option [value]="2">2</option>
-              <option [value]="3">3</option>
-              <option [value]="4">4</option>
-              <option [value]="5">5</option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <strong>
-              <label for="notesTextarea">Notes</label>
-            </strong>
-            <textarea id="notesTextarea" class="col-12 form-control" value="{{(afData$ | async)?.conversations[conversationId]?.note}}"
-              [(ngModel)]="note" name="notesTextarea" (ngModelChange)="updateNote(note)"></textarea>
-          </div>
-        </div>
-      </form>
+      <app-form [conversation]="conversation" [afData]="(afData$ | async)"></app-form>
     </div>
   </div>
 </div>
