--- a/src/app/main/messages/messages.component.html
+++ b/src/app/main/messages/messages.component.html
@@ -1,27 +1,42 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Conversation Messages</h5>
-    <span *ngIf="conversation">
-      <h6 class="card-subtitle mb-2 text-muted" placement="top" matTooltip="Export to CSV" (click)="downloadCsv()" style="cursor: pointer;">{{conversation?.info.conversationId}}
-        <i class="p-1 fa fa-download" aria-hidden="true"></i>
-      </h6>
-    </span>
     <div class="row">
-      <div class="col-4">
-        <strong>sentBy</strong>
-      </div>
-      <div class="col-8">
-        <strong>message</strong>
+      <h5 class="card-title col-auto">Conversation Messages</h5>
+      <div class="col text-right">
+        <i class="fa fa-chevron-left pr-2" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(false)"></i>
+        <i class="fa fa-chevron-right" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(true)"></i>
       </div>
     </div>
 
-    <div class="row scroll-container">
-      <ng-container *ngFor="let row of conversation?.messageRecords">
-        <div class="col-4">
-          {{row?.sentBy}}
+    <!-- Conversation subtitle & download button -->
+    <span *ngIf="conversation">
+      <span class="card-subtitle mb-2 text-muted">{{conversation?.info.conversationId}}
+        <i class="p-1 fa fa-download" aria-hidden="true" placement="top" matTooltip="Export to CSV" (click)="downloadCsv()" style="cursor: pointer;"></i>
+      </span>
+    </span>
+
+    <!-- No conversation message -->
+    <div *ngIf="!conversation" class="row mt-3">
+      <h4 class="col text-muted">Select a conversation</h4>
+    </div>
+
+    <!-- Message rows -->
+    <div class="scroll-container">
+      <div class="row" *ngFor="let row of conversation?.messageRecords">
+        <div class="col-12 pt-2">
+          <div class="row">
+            <div class="col-auto font-secondary">
+              {{row?.sentBy}}
+            </div>
+            <div class="col font-secondary">
+              {{row?.time | slice:11:19}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col font-primary" [ngClass]="row?.sentBy === 'Agent' ? 'font-agent' : 'font-consumer'">{{row?.messageData?.msg?.text}}</div>
+          </div>
         </div>
-        <div class="col-8">{{row?.messageData?.msg?.text}}</div>
-      </ng-container>
+      </div>
     </div>
   </div>
 </div>
