--- a/src/styles/ngx-material.css
+++ b/src/styles/ngx-material.css
@@ -1,6 +1,8 @@
 .ngx-datatable.material {
   background: #FFF;
-  /* box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12); */
+  /*-webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);*/
+  /*-moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);*/
+  /*box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);*/
   /**
 	 * Shared Styles
 	 */
@@ -22,23 +24,23 @@
   .ngx-datatable.material.single-selection .datatable-body-row.active .datatable-row-group, .ngx-datatable.material.multi-selection .datatable-body-row.active,
   .ngx-datatable.material.multi-selection .datatable-body-row.active .datatable-row-group, .ngx-datatable.material.multi-click-selection .datatable-body-row.active,
   .ngx-datatable.material.multi-click-selection .datatable-body-row.active .datatable-row-group {
-    background-color: #304FFE;
+    background-color: #00ccff;
     color: #FFF; }
   .ngx-datatable.material.single-selection .datatable-body-row.active:hover,
   .ngx-datatable.material.single-selection .datatable-body-row.active:hover .datatable-row-group, .ngx-datatable.material.multi-selection .datatable-body-row.active:hover,
   .ngx-datatable.material.multi-selection .datatable-body-row.active:hover .datatable-row-group, .ngx-datatable.material.multi-click-selection .datatable-body-row.active:hover,
   .ngx-datatable.material.multi-click-selection .datatable-body-row.active:hover .datatable-row-group {
-    background-color: #193AE4;
+    background-color: #5879DA;
     color: #FFF; }
   .ngx-datatable.material.single-selection .datatable-body-row.active:focus,
   .ngx-datatable.material.single-selection .datatable-body-row.active:focus .datatable-row-group, .ngx-datatable.material.multi-selection .datatable-body-row.active:focus,
   .ngx-datatable.material.multi-selection .datatable-body-row.active:focus .datatable-row-group, .ngx-datatable.material.multi-click-selection .datatable-body-row.active:focus,
   .ngx-datatable.material.multi-click-selection .datatable-body-row.active:focus .datatable-row-group {
-    background-color: #2041EF;
+    background-color: #5879DA;
     color: #FFF; }
   .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover,
   .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
-    background-color: #eee;
+    background-color: #BFBFBF;
     transition-property: background;
     transition-duration: .3s;
     transition-timing-function: linear; }
@@ -56,15 +58,15 @@
     background-color: #ddd; }
   .ngx-datatable.material.cell-selection .datatable-body-cell.active,
   .ngx-datatable.material.cell-selection .datatable-body-cell.active .datatable-row-group {
-    background-color: #304FFE;
+    background-color: #00ccff;
     color: #FFF; }
   .ngx-datatable.material.cell-selection .datatable-body-cell.active:hover,
   .ngx-datatable.material.cell-selection .datatable-body-cell.active:hover .datatable-row-group {
-    background-color: #193AE4;
+    background-color: #5879DA;
     color: #FFF; }
   .ngx-datatable.material.cell-selection .datatable-body-cell.active:focus,
   .ngx-datatable.material.cell-selection .datatable-body-cell.active:focus .datatable-row-group {
-    background-color: #2041EF;
+    background-color: #5879DA;
     color: #FFF; }
   .ngx-datatable.material .empty-row {
     height: 50px;
@@ -93,12 +95,10 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.12); }
     .ngx-datatable.material .datatable-header .datatable-header-cell {
       text-align: left;
-      padding: .9rem 1.2rem;
+      padding: .5rem 1.2rem;
       font-weight: 400;
-      color: rgba(0, 0, 0, 0.54);
-      vertical-align: bottom;
-      font-size: 12px;
-      font-weight: 500; }
+      color: #757575;
+      vertical-align: bottom; }
       .ngx-datatable.material .datatable-header .datatable-header-cell .datatable-header-cell-wrapper {
         position: relative; }
       .ngx-datatable.material .datatable-header .datatable-header-cell.longpress .draggable::after {
@@ -127,28 +127,13 @@
   .ngx-datatable.material .datatable-body .datatable-row-detail {
     background: #f5f5f5;
     padding: 10px; }
-  .ngx-datatable.material .datatable-body .datatable-group-header {
-    background: #f5f5f5;
-    border-bottom: solid 1px #D9D8D9;
-    border-top: solid 1px #D9D8D9; }
   .ngx-datatable.material .datatable-body .datatable-body-row .datatable-body-cell {
     text-align: left;
-    padding: .9rem 1.2rem;
+    padding: .5rem 1.2rem;
     vertical-align: top;
     border-top: 0;
-    color: rgba(0, 0, 0, 0.87);
-    transition: width 0.3s ease;
-    font-size: 14px;
-    font-weight: 400; }
-  .ngx-datatable.material .datatable-body .datatable-body-row .datatable-body-group-cell {
-    text-align: left;
-    padding: .9rem 1.2rem;
-    vertical-align: top;
-    border-top: 0;
-    color: rgba(0, 0, 0, 0.87);
-    transition: width 0.3s ease;
-    font-size: 14px;
-    font-weight: 400; }
+    -webkit-transition: width 0.3s ease;
+    transition: width 0.3s ease; }
   .ngx-datatable.material .datatable-body .progress-linear {
     display: block;
     position: relative;
@@ -165,14 +150,14 @@
       height: 5px;
       -webkit-transform: translate(0, 0) scale(1, 1);
       transform: translate(0, 0) scale(1, 1);
-      background-color: #aad1f9; }
+      background-color: #DEDDDD; }
       .ngx-datatable.material .datatable-body .progress-linear .container .bar {
         transition: all .2s linear;
         -webkit-animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
         animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
         transition: -webkit-transform .2s linear;
         transition: transform .2s linear;
-        background-color: #106cc8;
+        background-color: #162036;
         position: absolute;
         left: 0;
         top: 0;
@@ -181,9 +166,7 @@
         height: 5px; }
   .ngx-datatable.material .datatable-footer {
     border-top: 1px solid rgba(0, 0, 0, 0.12);
-    font-size: 12px;
-    font-weight: 400;
-    color: rgba(0, 0, 0, 0.54); }
+    font-size: 16px; }
     .ngx-datatable.material .datatable-footer .page-count {
       line-height: 50px;
       height: 50px;
@@ -213,10 +196,10 @@
         .ngx-datatable.material .datatable-footer .datatable-pager a:hover {
           color: rgba(0, 0, 0, 0.75);
           background-color: rgba(158, 158, 158, 0.2); }
-      .ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-left,
-      .ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-skip,
-      .ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-right,
-      .ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-prev {
+      .ngx-datatable.material .datatable-footer .datatable-pager .icon-left,
+      .ngx-datatable.material .datatable-footer .datatable-pager .icon-skip,
+      .ngx-datatable.material .datatable-footer .datatable-pager .icon-right,
+      .ngx-datatable.material .datatable-footer .datatable-pager .icon-prev {
         font-size: 20px;
         line-height: 20px;
         padding: 0 3px; }
@@ -231,7 +214,7 @@
   vertical-align: middle;
   display: inline-block;
   box-sizing: border-box;
-  padding: 0; }
+  padding: 10px 0; }
   .datatable-checkbox input[type='checkbox'] {
     position: relative;
     margin: 0 1rem 0 0;
