--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Transcript Auditor</a>
   <i class="fa fa-bars fa-2x" style="color: white;" aria-hidden="true" (click)="openDialog()"></i>
 </nav>
