--- a/src/app/main/messages/messages.component.html
+++ b/src/app/main/messages/messages.component.html
@@ -3,25 +3,23 @@
     <div class="row">
       <h5 class="card-title col-auto">Conversation Messages</h5>
       <div class="col text-right">
-        <i class="fa fa-chevron-left pr-2" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(false)"></i>
-        <i class="fa fa-chevron-right" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(true)"></i>
+        <i class="fa fa-chevron-left pr-2" matTooltip="Previous conversation" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(false)"></i>
+        <i class="fa fa-chevron-right" matTooltip="Next conversation" style="cursor: pointer;" aria-hidden="true" (click)="cycleConversations(true)"></i>
       </div>
     </div>
 
     <!-- Conversation subtitle & download button -->
     <span *ngIf="conversation">
       <span class="card-subtitle mb-2 text-muted">{{conversation?.info.conversationId}}
-        <i class="p-1 fa fa-download" aria-hidden="true" placement="top" matTooltip="Export to CSV" (click)="downloadCsv()" style="cursor: pointer;"></i>
+        <i class="p-1 fa fa-download" aria-hidden="true" matTooltip="Export to CSV" (click)="downloadCsv()" style="cursor: pointer;"></i>
       </span>
     </span>
-
+    
     <!-- No conversation message -->
-    <div *ngIf="!conversation" class="row mt-3">
-      <h4 class="col text-muted">Select a conversation</h4>
-    </div>
+    <app-no-results [results]="conversation" [messagePrimary]="'Select a conversation'"></app-no-results>
 
     <!-- Message rows -->
-    <div class="scroll-container">
+    <div class="container-fluid scroll-container p-0">
       <div class="row" *ngFor="let row of conversation?.messageRecords">
         <div class="col-12 pt-2">
           <div class="row">
