--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,12 @@ body {
   left: 45%;
   top: 35%;
 }
+.scroll-container {
+  overflow-y: scroll; 
+  overflow-x: hidden; 
+  height: 600px;
+  position: relative;
+}
 
 /* bootstrap overrided */
 .card, .card-title, .card-subtitle, .navbar, .font-primary, .font-secondary {
@@ -39,8 +45,11 @@ body {
   color: #5d5e60;
 }
 
-/* angular material theme */
+/* angular material */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+mat-sidenav {
+  width: 300px;
+}
 
 /* ngx-datatable */
 @import './styles/ngx-datatable.css';
