--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,12 @@
-<div class="jumbotron">
-  <h1 class="display-3">Transcript Auditor</h1>
-  <p class="lead">Audit your transcripts</p>
-  <hr class="my-4">
-  <p class="lead">
-    <button type="submit" class="btn btn-primary" (click)="login()">Sign in with Google</button>
-  </p>
+<div class="container-fluid">
+<div class="row no-gutters justify-content-center align-items-center mt-5 pt-4 mb-3 pb-3">
+  <div class="col-auto text-center">
+    <img src="./assets/logo.png" style="width: 100%; height: auto;">
+  </div>
+</div>
+<div class="row mt-4 pt-4 no-gutters justify-content-center align-items-center">
+  <div class="col-auto text-center">
+    <div class="google" (click)="login()"></div>
+  </div>
+</div>
 </div>
