--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Transcript Auditor</a>
-  <i class="fa fa-bars fa-2x" style="color: white;" aria-hidden="true" (click)="openDialog()"></i>
+  <img src="./assets/logo_header.png" class="logo-header img-fluid">
+  <i class="fa fa-bars fa-2x" aria-hidden="true" (click)="openDialog()"></i>
 </nav>
 
 <!-- side nav container -->
@@ -10,18 +10,18 @@
 
     <div class="row no-gutters mt-2">
 
-      <div class="col-8 pr-1">
+      <div class="col-12 col-md-8 pr-md-1">
         <div class="row no-gutters">
-          <div class="col-12 col-md-6 pr-1">
+          <div class="col-12 col-md-6 pr-md-1">
             <app-conversations [conversations]="conversations" (selectConversation)="getConversation($event)"></app-conversations>
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-6 mt-1 mt-md-0">
             <app-messages [conversation]="conversation" (nextConversation)="cycleConversations($event)"></app-messages>
           </div>
         </div>
       </div>
 
-      <div class="col-4">
+      <div class="col-12 col-md-4 mt-1 md-md-0">
         <div class="row no-gutters">
           <div class="col-12">
             <app-conversation-stats [conversation]="conversation"></app-conversation-stats>
