feat: allow search by conversationId

--- a/src/app/main/form/form.component.html
+++ b/src/app/main/form/form.component.html
@@ -6,15 +6,15 @@
         <i class="fa fa-sticky-note" matTooltip="Previous notes" style="cursor: pointer;" aria-hidden="true" (click)="openSidenav()"></i>
       </div>
     </div>
-    <span class="card-subtitle mb-2 text-muted">{{conversation?.info?.conversationId}}</span>
+    <span class="card-subtitle mb-2 text-muted">{{conversation?.info.conversationId}}</span>
 
     <form *ngIf="formReady">
 
       <!-- row for selectors -->
-      <app-form-select [select]="select" [id]="conversation.info.conversationId"></app-form-select>
+      <app-form-select [select]="select" [id]="conversation?.info.conversationId"></app-form-select>
 
       <!-- Row for notes -->
-      <app-form-notes [note]="note" [id]="conversation.info.conversationId"></app-form-notes>
+      <app-form-notes [note]="note" [id]="conversation?.info.conversationId"></app-form-notes>
 
       <!-- row for saved notification -->
       <app-form-save></app-form-save>
