fix: cycle conversation bug

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-4 mt-1 md-md-0">
+      <div class="col-12 col-md-4 mt-1 mt-md-0">
         <div class="row no-gutters">
           <div class="col-12">
             <app-conversation-stats [conversation]="conversation"></app-conversation-stats>
