fix: side-nav bug

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -11,17 +11,12 @@
   <div *ngIf="(apiLoading$ | async)" class="font-secondary">
     <i class="fa fa-spinner fa-pulse text-center"></i> Loading...</div>
   <div class="scroll-container">
-    <div *ngFor="let data of afCollection" class="row mt-2" (click)="selectNote(data.conversationId)" style="cursor: pointer;">
+    <div *ngFor="let item of afCollection" class="row mt-2" (click)="selectNote(item.conversationId)" style="cursor: pointer;">
       <div class="col-12 font-primary">
-        {{data.lastUpdateTime | date}}
+        {{item.lastUpdateTime | date}}
       </div>
-      <small>
-        <div class="col-12 font-secondary">
-          {{data.conversationId}}
-        </div>
-      </small>
-      <div class="col-12 font-secondary">
-        {{data.note}}
+      <div class="col-12 font-secondary text-truncate">
+        {{item.data.note}}
       </div>
     </div>
   </div>
