--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,8 +1,5 @@
 <!-- navbar -->
-<nav class="navbar navbar-dark bg-dark">
-  <img src="./assets/logo_header.png" class="logo-header img-fluid">
-  <i class="fa fa-bars fa-2x" aria-hidden="true" (click)="openDialog()"></i>
-</nav>
+<app-header></app-header>
 
 <!-- side nav container -->
 <mat-sidenav-container class="example-container">
@@ -10,33 +7,25 @@
 
     <div class="row no-gutters mt-2">
 
-      <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-1">
+      <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-2">
         <app-conversations [count]="count" [conversations]="conversations" (selectConversation)="getConversation($event)"></app-conversations>
       </div>
 
-      <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-1">
+      <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-2">
         <div class="row no-gutters">
-          <div class="col-12">
-            <app-conversation-chart [conversation]="conversation"></app-conversation-chart>
-          </div>
+          <app-conversation-chart [conversation]="conversation"></app-conversation-chart>
         </div>
-        <div class="row no-gutters mt-1">
-          <div class="col-12">
-            <app-messages [conversation]="conversation" (nextConversation)="cycleConversations($event)"></app-messages>
-          </div>
+        <div class="row no-gutters pt-2">
+          <app-messages [conversation]="conversation" (nextConversation)="cycleConversations($event)"></app-messages>
         </div>
       </div>
 
       <div class="col-12 col-md-4 mt-1 mt-md-0">
         <div class="row no-gutters">
-          <div class="col-12">
-            <app-conversation-stats [conversation]="conversation"></app-conversation-stats>
-          </div>
+          <app-conversation-stats [conversation]="conversation"></app-conversation-stats>
         </div>
-        <div class="row no-gutters mt-1">
-          <div class="col-12">
-            <app-form [conversation]="conversation" [afData]="(afData$ | async)" [sidenav]="sidenav"></app-form>
-          </div>
+        <div class="row no-gutters pt-2">
+          <app-form [conversation]="conversation" [afData]="(afData$ | async)" [sidenav]="sidenav"></app-form>
         </div>
       </div>
 
