--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -10,7 +10,7 @@
   <div *ngIf="!(apiLoading$ | async)" class="font-secondary col-auto">Click note to select</div>
   <div *ngIf="(apiLoading$ | async)" class="font-secondary">
     <i class="fa fa-spinner fa-pulse text-center"></i> Loading...</div>
-  <div class="scroll-container">
+  <div class="nav-scroll-container">
     <div *ngFor="let item of afCollection" class="row mt-2" (click)="selectNote(item.conversationId)" style="cursor: pointer;">
       <div class="col-12 font-primary">
         {{item.lastUpdateTime | date}}
