feat: modal opens/closes on login/logout

--- a/src/app/main/modal/modal.component.html
+++ b/src/app/main/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Settings</h4>
+  <h4 class="modal-title">LiveEngage Login</h4>
   <div class="col-1">
     <i class="fa fa-times" aria-hidden="true" (click)="dialogRef.close()"></i>
   </div>
@@ -31,6 +31,6 @@
 
 <!-- Logout of Auditor -->
 <div class="modal-footer">
-  <button *ngIf="(isAdmin() | async)" type="submit" class="btn btn-outline-success" (click)="getAll()">Export User Data</button>
-  <button type="submit" class="btn btn-outline-danger" (click)="logout()">Sign out</button>
+  <button *ngIf="(isAdmin() | async)" type="submit" class="btn btn-outline-success" (click)="getAll()">Admin Export</button>
+  <button type="submit" class="btn btn-outline-danger" (click)="logout()">Sign out of Auditor</button>
 </div>
