--- a/src/app/main/messages/message-transfer/message-transfer.component.html
+++ b/src/app/main/messages/message-transfer/message-transfer.component.html
@@ -1,3 +1,11 @@
+<div class="row">
+  <div class="col-auto font-secondary">
+    System
+  </div>
+  <div class="col font-secondary">
+    {{transfer.time | slice:11:19}}
+  </div>
+</div>
 <div class="row font-primary">
   <div class="col-12">
     <span class="text-info">
