feat: add agent summary to notes section

--- a/src/app/main/form/form-select/form-select.component.html
+++ b/src/app/main/form/form-select/form-select.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2">
+<div class="row mt-2 font-primary">
   <div class="col-6">
     <label for="outcomeSelect">Outcome Select</label>
     <select class="form-control" id="outcomeSelect" [(ngModel)]="formData.select" name="outcome" (ngModelChange)="changeSelect(formData.select)">
