--- a/src/app/main/form/form-notes/form-notes.component.html
+++ b/src/app/main/form/form-notes/form-notes.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2">
+<div class="row mt-2 font-primary">
   <div class="col-12">
     <label for="notesTextarea">Notes</label>
     <textarea id="notesTextarea" class="col-12 form-control" [(ngModel)]="formData.note" name="notes" (ngModelChange)="changeNote(formData.note)"></textarea>
