--- a/src/app/main/form/form.component.html
+++ b/src/app/main/form/form.component.html
@@ -6,7 +6,7 @@
         <i class="fa fa-sticky-note p-1" matTooltip="Previous notes" style="cursor: pointer;" aria-hidden="true" (click)="openSidenav()"></i>
       </div>
     </div>
-    <span class="card-subtitle mb-2 text-muted">{{conversation?.info.conversationId}}</span>
+    <span class="card-subtitle mb-2 text-muted">ID: {{conversation?.info.conversationId}}</span>
 
     <form *ngIf="formReady">
       <!-- row for selectors -->
@@ -16,6 +16,14 @@
       <!-- row for saved notification -->
       <app-form-save></app-form-save>
     </form>
+
+    <!-- conversation agent summary -->
+    <div *ngIf="conversation?.summary" class="row mt-2">
+      <div class="col">
+        <label class="font-primary">Agent Summary</label><br/>
+        <span class="font-secondary"><small>{{conversation?.summary?.text}}</small></span>
+      </div>
+    </div>
 
   </div>
 </div>
