--- a/src/app/main/form/form.component.html
+++ b/src/app/main/form/form.component.html
@@ -6,22 +6,22 @@
         <i class="fa fa-sticky-note p-1" matTooltip="Previous notes" style="cursor: pointer;" aria-hidden="true" (click)="openSidenav()"></i>
       </div>
     </div>
-    <span class="card-subtitle mb-2 text-muted">ID: {{conversation?.info.conversationId}}</span>
+    <span class="card-subtitle mb-2 text-muted">ID: {{apiConversation?.info.conversationId}}</span>
 
     <form *ngIf="formReady">
       <!-- row for selectors -->
-      <app-form-select [formData]="formData" [id]="conversation?.info.conversationId"></app-form-select>
+      <app-form-select [formData]="formData" [id]="apiConversation?.info.conversationId"></app-form-select>
       <!-- Row for notes -->
-      <app-form-notes [formData]="formData" [id]="conversation?.info.conversationId"></app-form-notes>
+      <app-form-notes [formData]="formData" [id]="apiConversation?.info.conversationId"></app-form-notes>
       <!-- row for saved notification -->
-      <app-form-save></app-form-save>
+      <app-form-save [afConversationData]="afConversationData"></app-form-save>
     </form>
 
     <!-- conversation agent summary -->
-    <div *ngIf="conversation?.summary" class="row mt-2">
+    <div *ngIf="apiConversation?.summary" class="row mt-2">
       <div class="col">
         <label class="font-primary">Agent Summary</label><br/>
-        <span class="font-secondary"><small>{{conversation?.summary?.text}}</small></span>
+        <span class="font-secondary"><small>{{apiConversation?.summary?.text}}</small></span>
       </div>
     </div>
 
