--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,34 +8,33 @@
     <div class="row no-gutters mt-2">
 
       <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-2">
-        <app-conversations [count]="count" [conversations]="conversations" (selectConversation)="getConversation($event)"></app-conversations>
+        <app-conversations [count]="count" [apiConversations]="apiConversations" (selectConversation)="selectConversation($event)"></app-conversations>
       </div>
 
       <div class="col-12 col-md-4 mt-1 mt-md-0 pr-md-2">
         <div class="row no-gutters">
-          <app-conversation-chart [conversation]="conversation"></app-conversation-chart>
+          <app-conversation-chart [apiConversation]="apiConversation"></app-conversation-chart>
         </div>
         <div class="row no-gutters pt-2">
-          <app-messages [conversation]="conversation" (nextConversation)="cycleConversations($event)"></app-messages>
+          <app-messages [apiConversation]="apiConversation" (nextConversation)="cycleConversations($event)"></app-messages>
         </div>
       </div>
 
       <div class="col-12 col-md-4 mt-1 mt-md-0">
         <div class="row no-gutters">
-          <app-conversation-stats [conversation]="conversation"></app-conversation-stats>
+          <app-conversation-stats [apiConversation]="apiConversation"></app-conversation-stats>
         </div>
         <div class="row no-gutters pt-2">
-          <app-form [conversation]="conversation" [afData]="(afData$ | async)" [sidenav]="sidenav"></app-form>
+          <app-form [apiConversation]="apiConversation" [afConversationsData]="(afConversationsData$ | async)" [sidenav]="sidenav"></app-form>
         </div>
       </div>
-
 
     </div>
   </div>
 
   <!-- side nav -->
   <mat-sidenav mode="push" position="end" #sidenav>
-    <app-side-nav [afData]="(afData$ | async)"></app-side-nav>
+    <app-side-nav [afConversationsData]="(afConversationsData$ | async)"></app-side-nav>
   </mat-sidenav>
 
 </mat-sidenav-container>
