--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 <div class="row no-gutters justify-content-center align-items-center mt-5 pt-4 mb-3 pb-3">
   <div class="col-auto text-center">
-    <img src="./assets/logo.png" style="width: 100%; height: auto;">
+    <img src="./assets/logo.png" class="login-logo">
   </div>
 </div>
 <div class="row mt-4 pt-4 no-gutters justify-content-center align-items-center">
