--- a/src/app/main/messages/message-link/message-link.component.html
+++ b/src/app/main/messages/message-link/message-link.component.html
@@ -1,11 +1,4 @@
-<div class="row">
-  <div class="col-auto font-secondary">
-    {{message.sentBy}}
-  </div>
-  <div class="col font-secondary">
-    {{message.time | slice:11:19}}
-  </div>
-</div>
+<app-message-by [by]="message.sentBy" [time]="message.time"></app-message-by>
 <div class="row">
   <div class="col font-primary" [ngClass]="message.sentBy === 'Agent' ? 'font-agent' : 'font-consumer'">
     <img [src]="message.messageData.link.externalFileLink">
