--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   background-color: #e9ecef;
-} 
+}
 
 /* hovers */
 .fa-chevron-left:hover,
 .fa-chevron-right:hover,
 .fa-sticky-note:hover,
 .fa-download:hover,
-.note-row:hover>.font-primary,
-.note-row:hover>.font-secondary,
-.note-select>.font-primary,
-.note-select>.font-secondary {
+.note-row:hover > .font-primary,
+.note-row:hover > .font-secondary,
+.note-select > .font-primary,
+.note-select > .font-secondary {
   background: #9c9ea0;
   color: #ffffff;
   border-radius: 5px;
@@ -47,7 +47,7 @@ body {
 .card-subtitle,
 .navbar,
 .font-primary,
-.font-secondary {
+.font-secondary, .font-by {
   font-family: MyriadPro, 'sans-serif';
 }
 .font-primary,
@@ -57,11 +57,25 @@ body {
 .font-primary {
   color: black;
 }
-.font-secondary {
+.font-secondary, .font-by {
   color: #9c9c9c;
 }
+.font-by {
+  font-size: 0.9rem;
+}
 .font-agent {
-  color: blueviolet;
+  color: #707070;
+}
+.font-consumer {
+  color: white;
+}
+.message-card-consumer {
+  background: #5879da;
+  border: none;
+}
+.message-card-agent {
+  background: #dedddd;
+  border: none;
 }
 .navbar-brand {
   font-weight: lighter;
